# Atividades-dia-13

./: CMakeLists.txt
AgendaTelefonica/: agenda.c  agenda.h  main.c
Calculadora Pos Fixada/: CalculadoraPF.c  CalculadoraPF.h  main.c
CombinacaoDeFilas/: CombinacaodeFilias.c  CombinacaodeFilias.h  main.c
ConversorDecimalParaBinario/: DeciToBin.c  DeciToBin.h  main.c
