cmake_minimum_required(VERSION 3.23)
project(Atividades_dia_13 C)

set(CMAKE_C_STANDARD 99)

add_executable(Atividades_dia_13 "Calculadora Pos Fixada/main.c" "Calculadora Pos Fixada/CalculadoraPF.c" "Calculadora Pos Fixada/CalculadoraPF.h" "CombinacaoDeFilas/main.c" "CombinacaoDeFilas/CombinacaodeFilias.c" "CombinacaoDeFilas/CombinacaodeFilias.h" ConversorDecimalParaBinario/DeciToBin.c ConversorDecimalParaBinario/DeciToBin.h ConversorDecimalParaBinario/main.c AgendaTelefonica/agenda.c AgendaTelefonica/agenda.h AgendaTelefonica/main.c)
